# LB7

Task/: CMakeLists.txt  Task  Task.cpp  Task_1.h  check_ho_rip_for_task_5.h  check_write_for_task_5.h  check_write_string.h  create_notation.h  delenie_2.h  delenie_ostatok_task_3.h  for_3_task_4.h  for_61_or_131_task_4.h  meniu.h  my_sum.h  ostatok.h  priamoi_kod_task_2.h  rewerse_task_3.h  size_for_task_2.h  sum_differense.h  summa_task_2.h  write_base.h  write_for_start.h  write_for_task_4.h  write_no_limit.h
